--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 sudo: false
+
 language: node_js
+
 node_js:
-  - 'iojs'
-  - '0.12'
-  - '0.10'
+  - '4'
+
+cache:
+  directories:
+    - "node_modules"
+
+install:
+  - npm install
+
+script:
+  - npm test
